# dotfiles

./: .aqua-checksums.json  .aqua.yaml  .editorconfig  .gitignore  .gitmodules  .textlintrc.yaml  .todosignore  .yamlfmt.kubernetes.yaml  .yamllint.kubernetes.yaml  .yamllint.yaml  .zizmor.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  _nvim_checkhealth.sh  aqua-checksums.json  aqua.yaml  commitlint.config.mjs  crontab  go.mod  neovim.yaml  package-lock.json  package.json  pyproject.toml  renovate.json5  requirements-dev.txt  requirements.txt  selene.toml  stylua.toml  test.sh  versions.mk  zizmor.yml
.github/: actionlint.yaml  dependabot.yml  template.markdownlint.yaml
aqua/: aqua-checksums.json  aqua.yaml
bash/: README.md  _bash_aliases  _bash_completion  _bash_logout  _bash_profile  _bashrc  _dockerfunc  _inputrc  _profile
blesh/: init.sh
config/: coding-assistant-docker-images.policy.cue
crictl/: crictl.yaml
cron/: README.md
efm-langserver/: config.yaml
flake8/: flake8.ini
ghostty/: config
git/: _gitconfig
k9s/: config.yaml
mercurial/: README.md  _hgrc
nix/: nix.conf
nodenv/: README.md  package-lock.json  package.json
npm/: _npmrc
nvim/: README.md  init.lua  init.vim
remark/: _remarkrc
screen/: _screenrc
scripts/: update-checksums.py
ssh/: config
tmux/: README.md  _tmux.conf
vim/: README.md  _gvimrc  _vimrc  _vimrc.vim  _vimrc.windows
virtualenvwrapper/: postmkvirtualenv
yamlfmt/: _yamlfmt.kubernetes.yaml
yamllint/: _config  _config.kubernetes.yaml  (+1 more)
(+136 files in other folders)
